// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LikeC4ModelBuilder > builds model 1`] = `
{
  "elements": {
    "client": {
      "astPath": "/model/elements@0",
      "id": "client",
      "kind": "user",
      "shape": "person",
      "title": "client",
    },
    "system": {
      "astPath": "/model/elements@1",
      "id": "system",
      "kind": "component",
      "title": "system",
    },
    "system.backend": {
      "astPath": "/model/elements@1/definition/elements@0",
      "color": "secondary",
      "id": "system.backend",
      "kind": "component",
      "title": "Backend",
    },
    "system.frontend": {
      "astPath": "/model/elements@1/definition/elements@1",
      "color": "muted",
      "id": "system.frontend",
      "kind": "component",
      "shape": "browser",
      "tags": [
        "deprecated",
      ],
      "title": "frontend",
    },
  },
  "relations": {
    "2dc0c7f9bbc24d54946dd5291e4f1f6b43f86657": {
      "id": "2dc0c7f9bbc24d54946dd5291e4f1f6b43f86657",
      "source": "client",
      "target": "system.frontend",
      "title": "",
    },
    "ca3a02360ed74e5c11d3ffea13e6b400e2e83534": {
      "id": "ca3a02360ed74e5c11d3ffea13e6b400e2e83534",
      "source": "system.frontend",
      "target": "system.backend",
      "title": "requests",
    },
  },
  "views": {},
}
`;

exports[`LikeC4ModelBuilder > builds model with extend 1`] = `
{
  "elements": {
    "client": {
      "astPath": "/model/elements@0",
      "id": "client",
      "kind": "user",
      "title": "client",
    },
    "system": {
      "astPath": "/model/elements@1",
      "id": "system",
      "kind": "component",
      "title": "system",
    },
    "system.backend": {
      "astPath": "/model/elements@1/definition/elements@0",
      "id": "system.backend",
      "kind": "component",
      "title": "backend",
    },
    "system.backend.api": {
      "astPath": "/model/elements@0/elements@0",
      "id": "system.backend.api",
      "kind": "component",
      "title": "api",
    },
    "system.frontend": {
      "astPath": "/model/elements@1/definition/elements@1",
      "id": "system.frontend",
      "kind": "component",
      "title": "frontend",
    },
  },
  "relations": {
    "671e3db5eb605d5f245f247d95925bd0953e0e4c": {
      "id": "671e3db5eb605d5f245f247d95925bd0953e0e4c",
      "source": "system.frontend",
      "target": "system.backend.api",
      "title": "requests",
    },
    "99bffdfd5c78e024393e6223cd9b19225321a5e3": {
      "id": "99bffdfd5c78e024393e6223cd9b19225321a5e3",
      "source": "client",
      "target": "system.frontend",
      "title": "",
    },
  },
  "views": {
    "896265706157590f12c4b05d2c5402bd8970e23c": {
      "edges": [
        {
          "id": "system.frontend:system.backend",
          "label": "requests",
          "relations": [
            "671e3db5eb605d5f245f247d95925bd0953e0e4c",
          ],
          "source": "system.frontend",
          "target": "system.backend",
        },
        {
          "id": "client:system.frontend",
          "label": null,
          "relations": [
            "99bffdfd5c78e024393e6223cd9b19225321a5e3",
          ],
          "source": "client",
          "target": "system.frontend",
        },
      ],
      "id": "896265706157590f12c4b05d2c5402bd8970e23c",
      "nodes": [
        {
          "children": [],
          "id": "client",
          "parent": null,
          "title": "client",
        },
        {
          "children": [],
          "id": "system.backend",
          "parent": null,
          "title": "backend",
        },
        {
          "children": [],
          "id": "system.frontend",
          "parent": null,
          "title": "frontend",
        },
      ],
      "rules": [
        {
          "exprs": [
            {
              "wildcard": true,
            },
          ],
          "isInclude": true,
        },
      ],
      "viewOf": "system.frontend",
    },
    "index": {
      "edges": [
        {
          "id": "client:system",
          "label": null,
          "relations": [
            "99bffdfd5c78e024393e6223cd9b19225321a5e3",
          ],
          "source": "client",
          "target": "system",
        },
      ],
      "id": "index",
      "nodes": [
        {
          "children": [],
          "id": "client",
          "parent": null,
          "title": "client",
        },
        {
          "children": [],
          "id": "system",
          "parent": null,
          "title": "system",
        },
      ],
      "rules": [
        {
          "exprs": [
            {
              "wildcard": true,
            },
          ],
          "isInclude": true,
        },
      ],
      "title": "Index",
    },
    "v1": {
      "edges": [
        {
          "id": "system.frontend:system.backend.api",
          "label": "requests",
          "relations": [
            "671e3db5eb605d5f245f247d95925bd0953e0e4c",
          ],
          "source": "system.frontend",
          "target": "system.backend.api",
        },
      ],
      "id": "v1",
      "nodes": [
        {
          "children": [],
          "id": "system.frontend",
          "parent": null,
          "title": "frontend",
        },
        {
          "children": [],
          "id": "system.backend.api",
          "parent": null,
          "title": "api",
        },
      ],
      "rules": [
        {
          "exprs": [
            {
              "wildcard": true,
            },
          ],
          "isInclude": true,
        },
      ],
      "viewOf": "system.backend.api",
    },
  },
}
`;
